# ai-gateway

./: Makefile  PROGRESS.md  README.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/adapters/: __init__.py  base.py  registry.py
backend/app/adapters/anthropic/: __init__.py  adapter.py
backend/app/adapters/azure/: __init__.py  adapter.py
backend/app/adapters/bedrock/: __init__.py  adapter.py
backend/app/adapters/domestic/: __init__.py  aliyun.py  baichuan.py  baidu.py  deepseek.py  minimax.py  moonshot.py  zhipu.py
backend/app/adapters/open_source/: __init__.py  ollama.py  vllm.py
backend/app/adapters/openai/: __init__.py  adapter.py
backend/app/api/: __init__.py  deps.py
backend/app/api/admin/: __init__.py  api_keys.py  channels.py  mcp.py  tenants.py
backend/app/api/mcp/: __init__.py  http.py  sse.py
backend/app/api/openai/: __init__.py  chat.py  embeddings.py  models.py
backend/app/api/telemetry/: __init__.py  health.py  usage.py
backend/app/billing/: __init__.py  invoice.py  report.py
backend/app/core/: __init__.py  exceptions.py  security.py
backend/app/mcp/: __init__.py  server.py  session.py
backend/app/mcp/auth/: __init__.py  rbac.py  tool_control.py
backend/app/mcp/prompts/: __init__.py  manager.py
backend/app/mcp/resources/: __init__.py  manager.py
backend/app/mcp/tools/: __init__.py  executor.py  openapi_gen.py  registry.py
backend/app/mcp/transport/: __init__.py  sse.py  stream_http.py
backend/app/models/: __init__.py  api_key.py  base.py  channel.py  mcp_server.py  mcp_tool.py  model_config.py  rbac.py  tenant.py  usage_log.py
backend/app/resilience/: __init__.py  circuit_breaker.py  fallback.py  health_check.py  retry.py
backend/app/routing/: __init__.py  base.py  channel_selector.py  weighted.py
backend/app/schemas/: __init__.py  admin.py  anthropic.py  common.py  openai.py
backend/app/services/: __init__.py  alert.py  auth.py  export.py  oauth2.py
backend/app/storage/: __init__.py  database.py  redis.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/tests/: conftest.py
backend/tests/integration_tests/: __init__.py  test_api.py
backend/tests/unit_tests/: __init__.py  test_billing.py  test_circuit_breaker.py  test_ratelimit.py  test_retry.py  test_routing.py  test_security.py
deploy/docker/: docker-compose.yaml  nginx.conf
deploy/k8s/: deployment.yaml  ingress.yaml  service.yaml
docs/: README.md  adapters.md  api.md  architecture.md  billing.md  data-models.md  deployment.md  development.md  frontend.md  mcp-protocol.md  resilience.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  channels.ts  client.ts  health.ts  keys.ts  logs.ts  mcp.ts  tenants.ts  types.ts  usage.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  auth.ts
frontend/src/views/: ChannelsView.vue  DashboardView.vue  KeysView.vue  LoginView.vue  LogsView.vue  MCPView.vue  SubKeysView.vue  TenantsView.vue  UsageView.vue
